--- a/style.css
+++ b/style.css
@@ -16,6 +16,19 @@ p {
 }
 
 /* Class styles */
+.main-content {
+    position: absolute;
+    top: 17%;
+    bottom: 12%;
+    left: 0;
+    right: 0;
+    width: 65%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1.5% 3%;
+    overflow: auto;
+  }  
+
 .lessons {
   overflow: auto;
 }
@@ -87,7 +100,6 @@ p {
   top: 30%;
   width: 45%;
   margin-top: 20px;
-  padding: 2%;
 }
 
 .study-themes-table {
@@ -123,20 +135,6 @@ p {
   color: rgb(25 , 63 , 124);
 }
 
-.main-content {
-  position: absolute;
-  top: 17%;
-  bottom: 12%;
-  left: 0;
-  right: 0;
-  width: 65%;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 1.5% 3%;
-  overflow: auto;
-}
-
-
 #minha_foto {
   height: 100%;
   right: 5%;
@@ -167,13 +165,13 @@ p {
 }
 
 /* Inherit styles */
-#rodape a:link , a:visited {
+#rodape a:visited {
   color: rgb(25 , 63 , 124);
 }
 
 #rodape a:visited {
-    color: rgb(25 , 63 , 124);
-  }
+  color: rgb(25 , 63 , 124);
+}
 
 #rodape a:hover {
   background-color: rgba(0 , 152 , 253 , 0.692);
@@ -188,4 +186,10 @@ p {
 .study-themes-table th {
   width: 200px;
   background-color: rgba(126 , 201 , 251);
+}
+
+.aside-content p {
+  text-align: center;
+  font-size: 50px;
+  line-height: 60px;
 }
