--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 }
 
 #titulo {
-  margin: 15px 150px;
+  margin: 5px 150px;
 }
 
 body {
@@ -28,59 +28,17 @@ body {
   border: 5px solid rgb(253 , 251 , 251);
 }
 
-#lista_conhecimento {
-  display: block;
-  width: 100%;
-  float: left;
-  margin: 30px;
-}
-
-#licoes_aprendidas {
-  display: inline-block;
-  float: left;
-}
-
-#licoes_a_aprender {
-  display: inline-block;
-  float: left;
-}
-
-.lado_esquerdo {
-  width: 45%;
-  float: left;
-  margin: 10px 0 50px 20px;
-  padding: 0 20px;
-}
-
-.lado_direito {
-  width: 45%;
-  float: left;
-  padding: 0 10px;
-  margin-top: 15px;
-}
-
-#rodape {
-  background-color: seagreen;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 2em;
-}
-
-#rodape h6 {
-  margin-left: 3%;
-  position: fixed;
-  bottom: 10px;
-  background-color: rgb(132 , 175 , 132);
-  font-size: 12px;
-}
-
 nav {
   display: inline-block;
   background-color: seagreen;
   height: 65px;
   border-radius: 35px 35px 0 0;
   margin: 0 5px;
+}
+
+nav ul li {
+  display: inline-block;
+  padding: 5px 10px;
 }
 
 #img_face {
@@ -103,13 +61,49 @@ nav {
   display: block;
 }
 
-nav ul li {
+#lista_conhecimento {
+  display: block;
+  width: 100%;
+  float: left;
+  margin: 30px;
+}
+
+#licoes_aprendidas {
   display: inline-block;
-  padding: 5px 10px;
+  float: left;
+}
+
+#licoes_a_aprender {
+  display: inline-block;
+  float: left;
+}
+
+#esq_dir {
+  display: flex;
+  background-color: burlywood;
+  width: 70%;
+  padding: 15px;
+}
+
+.lado_esquerdo {
+  display: inline-block;
+  float: left;
+  margin: 10px;
+  width: 30%;
+  margin: 10px 0 50px 20px;
+  background-color: cadetblue;
+  padding: 10px;
+}
+
+.lado_direito * {
+  display: inline-block;
+  width: 200PX;
+  padding: 10px;
+  margin: 15px;
 }
 
 #tabela {
-  border: 1px solid rgb(28, 25, 25);
+  border: 1px solid rgb(28 , 25 , 25);
   background-color: rgb(132 , 175 , 132);
   width: 400px;
   height: 100px;
@@ -123,4 +117,20 @@ table {
 
 td {
   text-align: center;
+}
+
+#rodape {
+  background-color: seagreen;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 2em;
+}
+
+#rodape h6 {
+  margin-left: 3%;
+  position: fixed;
+  bottom: 10px;
+  background-color: rgb(132 , 175 , 132);
+  font-size: 12px;
 }
