--- a/style.css
+++ b/style.css
@@ -4,53 +4,13 @@
   padding: 0%;
 }
 
-body {
-  background-color: rgb(253 , 251 , 251);
-  font-family: Segoe UI, Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  line-height: 30px;
-  margin: 5 5px;
-  padding: 5px;
-  color: rgb(37 , 37 , 37);
-}
-
-header {
-  background-color: darkcyan;
-  width: 100%;
-  padding-top: 30px;
-  margin-left: -9px;
-}
-
-#cabecalho {
-  position: fixed;
-  top: 0px;
-}
-
-h1 {
-  color: rgb(37 , 37 , 37);
-  text-align: center;
-  color: rgb(245 , 231 , 214);
-}
-
-li a {
-  display: inline-block;
-  background-color: darkcyan;
-  color: antiquewhite;
-  text-decoration: none;
-  padding: 10px;
-  margin-left: 100px;
-  margin-bottom: 5px;
-}
-
-a:hover {
-  background-color: rgb(8 , 124 , 124);
-  color: antiquewhite;
-}
-
-#minha_foto {
-  border-radius: 50%;
-  margin-left: 40%;
-  margin-top: 10%;
+.aprender {
+  display: block;
+  float: right;
+  width: 20%;
+  padding: 10px 30px;
+  margin-top: 35px;
+  margin-right: 10%;
 }
 
 .aprendidas {
@@ -62,26 +22,72 @@ a:hover {
   margin-left: 15%;
 }
 
-.aprender {
-  display: block;
-  float: right;
-  width: 20%;
-  padding: 10px 30px;
-  margin-top: 35px;
-  margin-right: 10%;
-}
-
 .aprendidas h2 , .aprender h2 {
   margin-bottom: 15px;
 }
 
-.lado-esquerdo {
-  float: left;
-  max-width: 60%;
-  padding: 10px;
-  margin-top: 35px;
-  margin-left: 50px;
+.artigo h2 {
+  padding-bottom: 15px;
+  text-align: center;
+  color: rgb(73 , 73 , 73);
+}
+
+.artigo p {
+  padding: 10px 30px;
+  background-color: rgb(253 , 251 , 251);
+  text-align: justify;
   text-indent: 20px;
+  padding-top: 10px;
+}
+
+a:hover {
+  background-color: rgb(8 , 124 , 124);
+  color: antiquewhite;
+}
+
+#big-section {
+  display: flex;
+  margin-top: 50px;
+}
+
+body {
+  background-color: rgb(253 , 251 , 251);
+  font-family: Segoe UI, Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  line-height: 30px;
+  margin: 5 5px;
+  padding: 5px;
+  color: rgb(37 , 37 , 37);
+}
+
+#cabecalho {
+  position: fixed;
+  top: 0;
+}
+
+footer {
+  background-color: rgb(8 , 124 , 124); 
+  width: 100%;
+  clear: both;
+  margin-left: -9px;
+  padding-right: 19px;
+  margin-bottom: -8px;
+  padding-top: 35px;
+  padding-bottom: 15px;
+  text-align: center;
+}
+
+h1 {
+  color: rgb(37 , 37 , 37);
+  text-align: center;
+  color: rgb(245 , 231 , 214);
+}
+
+header {
+  background-color: rgb(0 , 139 , 139);
+  width: 100%;
+  padding-top: 30px;
+  margin-left: -9px;
 }
 
 .lado-direito {
@@ -95,18 +101,40 @@ a:hover {
   background-color: rgb(235 , 231 , 231);
 }
 
-.artigo p {
-  padding: 10px 30px;
-  background-color: rgb(253 , 251 , 251);
-  text-align: justify;
+.lado-esquerdo {
+  float: left;
+  max-width: 60%;
+  padding: 10px;
+  margin-top: 35px;
+  margin-left: 50px;
   text-indent: 20px;
-  padding-top: 10px;
 }
 
-.artigo h2 {
-  padding-bottom: 15px;
-  text-align: center;
-  color: rgb(73 , 73 , 73);
+li a {
+  display: inline-block;
+  background-color: rgb(0 , 139 , 139);
+  color: rgb(250 , 235 , 215);
+  text-decoration: none;
+  padding: 10px;
+  margin-left: 100px;
+  margin-bottom: 5px;
+}
+
+.link {
+  color: rgb(250 , 235 , 215);
+  text-decoration: none;
+}
+
+#minha_foto {
+  border-radius: 50%;
+  margin-left: 40%;
+  margin-top: 10%;
+}
+
+section.table {
+  background-color: rgb(235 , 231 , 231);
+  float: right;
+  margin-right: 15px;
 }
 
 #table {
@@ -123,39 +151,11 @@ a:hover {
   margin-bottom: 15px;
 }
 
-section#table {
-  background-color: rgb(235 , 231 , 231);
-  float: right;
-  margin-right: 15px;
-}
-
 #table tr , #table td , #table th {
   background-color: rgb(12 , 145 , 145);
   line-height: 50px;
   padding: 5px  25px;
   border: 3px solid rgb(153 , 153 , 153);
-  color: antiquewhite;
+  color: rgb(250 , 235 , 215);
   text-align: left;
-}
-
-footer {
-  background-color: rgb(8 , 124 , 124);
-  width: 100%;
-  clear: both;
-  margin-left: -9px;
-  padding-right: 19px;
-  margin-bottom: -8px;
-  padding-top: 35px;
-  padding-bottom: 15px;
-  text-align: center;
-}
-
-.link {
-  color: antiquewhite;
-  text-decoration: none;
-}
-
-#big-section {
-  display: flex;
-  margin-top: 50px;
 }
