Corrigindo tag CSS de aside para section line 68

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ nav {
   display: inline-block;
 }
 
-#aluno_trybe aside {
+#aluno_trybe section {
   position: relative;
   margin-top: 220px;
   margin-left: 400px;
