--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-body{
-    background-color: rgb(253,251,251);
-    margin: 0;
+body {
+  background-color: rgb(253 , 251 , 251);
+  margin: 0;
 }
 
-.cabecalho{
-    position: fixed;
-    top: 0px;
+#cabecalho {
+  position: fixed;
+  top: 0;
 }
