--- a/style.css
+++ b/style.css
@@ -4,105 +4,92 @@ body {
   line-height: 1.5;
 }
 
+header {
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+}
+
+header ul {
+  font-size: 40px;
+  padding: 0;
+}
+
+header ul a {
+  color: antiquewhite;
+  margin: 25px;
+}
+
 img {
   border-radius: 10%;
-  margin-left: 2%;
   width: 200px;
+  z-index: 0;
 }
 
 table , th , td {
   border: 1px solid black;
 }
 
-nav ul {
-  text-align: center;
-  font-size: 40px;
-  padding-left: 0;
-  color: rgb(255, 255, 255);
-}
-
-nav ul a {
-  margin: 0 10px;
-  color: floralwhite;
-}
-
 * {
   margin: 0;
 }
 
-#aside {
-  background-color: #E9DCC9;
-  display: inline-block;
-  border: solid 1px;
-  padding: 10px;
-  width: 10%;
-  float: left;
+#article {
+  padding: 20px 10px 20px 10px;
+  background-color: bisque;
+  text-align: center;
+  margin: 20px 300px;
+  text-align: center;
+  width: 40%;
 }
 
-#article {
-  background-color: #B5C2CC;
-  display: inline-block;
-  border: solid 1px;
-  margin-left: 38px;
-  padding: 10px;
-  width: 32%;
-  
+#aside {
+  padding: 20px 10px 20px 10px;
+  background-color: bisque;
+  margin: 20px 670px;
+  text-align: center;
+  width: 20%;
+  /* width: 40%; */
 }
 
 #cabecalho {
   background-color: royalblue;
-  display: inline;
-  position: fixed;
-  padding: 20px;
-  color: lightcyan;
-  width: 100%;
-  margin: 0;
+  text-align: center;
+  color: #fff;
+  top: 0;
 }
 
 #content {
-  padding: 200px 40px 20px;
-  margin: 0 20px;
+  background-color: seashell;
+  margin-top: 90px;
 }
 
-#licoes_aprendidas {
-  width: 70%;
+.container {
+  padding: 100px 100px 0;
 }
 
-#rodape {
-  bottom: 0;
-  clear: both;
-}
+.container-aprendizados {
 
-#tabela {
-  display: inline-block;
-  margin: 38px;
-}
-
-#titulo {
-  text-align: center;
 }
 
 .lado-esquerdo {
   background-color: #C8C8C8;
+  padding: 20px 80px 20px;
   display: inline-block;
-  margin-bottom: 20px;
-  border: solid 1px;
-  padding: 20px;
-  width: 40%;
-  float: left;
+  margin-left: 15%;
+  width: 20%;
+  
 }
 
 .lado-direito {
   background-color: #6D6E80;
-  display: inline-block;
-  margin-bottom: 20px;
-  border: solid 1px;
-  padding: 20px;
-  width: 40%;
+  padding: 20px 80px 20px;
+  margin-right: 15%;
   float: right;
+  width: 20%;
 }
 
 .imagem {
-  padding: 150px 50px 0;
-  float: left;
+  position: absolute;
+  margin: 30px;
 }
