--- a/style.css
+++ b/style.css
@@ -36,12 +36,12 @@ body {
   float: right;
 }
 
-  #minha_foto {
+/*  #minha_foto {
   float: left;
   width: 60%;
   border: 4px double;
   border-radius: 9px;
-}
+}*/
 
   #textside {
   float: right;
