Estrutura do Requesito 4 - Tentativa 1

--- a/style.css
+++ b/style.css
@@ -121,3 +121,7 @@ body {
 #conteudo-principal .lado-direito .text-artigo {
   text-align: justify;
 }
+
+#conteudo-principal .secao-listas {
+  clear: both;
+}
