--- a/style.css
+++ b/style.css
@@ -51,10 +51,11 @@ nav {
 
 #menu li a {
   display: block;
-  color: white;
+  color: rgb(253 , 251 , 251);
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  font-size: 2rem;
 }
 
 #menu li a:hover {
