--- a/style.css
+++ b/style.css
@@ -1,130 +1,129 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-color: rgb( 253 , 251 , 251 );
-    font-family: 'Comic Neue', cursive;
-    font-weight: 500;
+  background-color: rgb(253, 251, 251);
+  font-family: Comic Neue, cursive;
+  font-weight: 500;
 }
 
 #cabecalho {
-    position: fixed;
-    top: 0px;
-    background-color: #1fe097;
-    height: 120px;
-    width: 100%;
-    text-align: center;
+  position: fixed;
+  top: 0;
+  background-color: green;
+  height: 120px;
+  width: 100%;
+  text-align: center;
 }
 
 .horizontal-nav-bar {
-    position: fixed;
-    left: 0;
-    width: 100%;
-    height: 50px;
-    top: 120px;
+  position: fixed;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  top: 120px;
 }
 
 .horizontal-nav-bar ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: rgb( 51 , 51 , 51 );
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgb(51, 51, 51);
 }
 
 .horizontal-nav-bar li {
-    float: left;
+  float: left;
 }
 
 .horizontal-nav-bar li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
 .horizontal-nav-bar li a:hover {
-    background-color: black;
+  background-color: black;
 }
 
 #minha_foto {
-    width: 250px;
-    height: 300px;
+  width: 250px;
+  height: 300px;
 }
 
 .main-container {
-    margin-top: 200px;
+  margin-top: 200px;
 }
 
 .photo-name {
-    text-align: center;
-    width: 300px;
-    border: 3px solid black;
-    padding: 10px;
-    margin: 30px 10px;
+  text-align: center;
+  width: 300px;
+  border: 3px solid black;
+  padding: 10px;
+  margin: 30px 10px;
 }
 
 .center-photo-name {
-    width: auto;
+  width: auto;
 }
 
 .lists {
-    width: auto;
-    text-align: center;
+  width: auto;
+  text-align: center;
 }
 
 #licoes_aprendidas {
-    margin: 30px;
-    width: 30%;
-    display: inline-block;
-    text-align: left;
+  margin: 30px;
+  width: 30%;
+  display: inline-block;
+  text-align: left;
 }
 
 #licoes_a_aprender {
-    margin: 30px;
-    width: 30%;
-    display: inline-block;
-    text-align: left;
+  margin: 30px;
+  width: 30%;
+  display: inline-block;
+  text-align: left;
 }
 
 .article-box {
-    padding: 30px;
-    text-align: center;
-    width: auto;
-    height: 200px;
+  padding: 30px;
+  text-align: center;
+  width: auto;
+  height: 200px;
 }
 
 .lado-esquerdo {
-    width: 60%;
-    display: inline-block;
-    text-align: center;
-    margin-top: 30px;
-    
+  width: 60%;
+  display: inline-block;
+  text-align: center;
+  margin-top: 30px;
 }
 
 .lado-direito {
-    border: 3px solid black;
-    width: 20%;
-    display: inline-block;
-    float: right;
-    margin-right: 50px;
-    margin-top: 30px;
+  border: 3px solid black;
+  width: 20%;
+  display: inline-block;
+  float: right;
+  margin-right: 50px;
+  margin-top: 30px;
 }
 
 #rodape {
-    padding: 50px;
-    text-align: center;
-    background-color: #1fe097;
-    border-top: 1px solid black;
-    font-size: 15px;
-    line-height: 25px;
+  padding: 50px;
+  text-align: center;
+  background-color: green;
+  border-top: 1px solid black;
+  font-size: 15px;
+  line-height: 25px;
 }
 
-table tr, td {
-    border: 1px solid black;
-    text-align: center;
-    margin: 20px 10px;
+table, tr, td {
+  border: 1px solid black;
+  text-align: center;
+  margin: 20px 10px;
 }
