--- a/style.css
+++ b/style.css
@@ -79,8 +79,11 @@ body {
 }
 
 #section-article {
-  margin-top: 20px;
+  margin-top: 40px;
   margin-bottom: 20px;
+  display: inline-block;
+  float: left;
+  font-size: 20px;
 }
 
 #section-article h2 {
@@ -97,8 +100,10 @@ body {
 }
 
 #section-aside {
-  margin-top: 20px;
+  margin-top: 40px;
   margin-bottom: 20px;
+  display: inline-block;
+  font-size: 20px;
 }
 
 #section-aside h2 {
