--- a/style.css
+++ b/style.css
@@ -1,57 +1,58 @@
 body {
-    background-color:rgb(253, 251, 251);
+    background-color: rgb(253, 251, 251);
 }
+
 #cabecalho {
-    position:fixed;
-    top:0;
-    background-color:rgb(72,164,107);
-    width:100%;
+    position: fixed;
+    top: 0;
+    background-color: rgb(72, 164, 107);
+    width: 100%;
 }
+
 #minha_foto {
-    width:300px;
-    margin-top:10%;
-    border:10px rgb(204,227,222) solid;
-    float:left;    
-  } 
-#lista1{
-    float:left;
-    margin-top:20%;   
+    width: 300px;
+    margin-top: 10%;
+    border: 10px rgb(204, 227, 222) solid;
+    float: left;
 }
-#lista2{
-   float:right;
-   margin-top:21%;
-   size:20px;
-   font-size:medium;
+
+#lista1 {
+    float: left;
+    margin-top: 20%;
 }
-#nav {    
-    padding-top:20% ;
-    width:20%;
+
+#lista2 {
+    float: right;
+    margin-top: 21%;
+    size: 20px;
+    font-size: medium;
+}
+
+#nav {
+    padding-top: 20%;
+    width: 20%;
     display: inline;
-    
 }
-#nav li{
+
+#nav li {
     display: inline;
 }
+
 #info {
-    
     padding-left: 80px;
     padding-right: 80px;
     float: left;
-    
-
 }
-
 
 #transicao {
     float: left;
     padding-left: 80px;
     padding-right: 80px;
-    
 }
 
-#rodape{
-    background-color:rgb(72,164,107);
+#rodape {
+    background-color: rgb(72, 164, 107);
     width: 100%;
-    height: 100px;   
+    height: 100px;
     float: left;
 }
