--- a/style.css
+++ b/style.css
@@ -18,7 +18,13 @@ header {
     height: 15vh;
     position: fixed;
     background-color: rgb( 22 , 75 , 80 );
-    top: 0;
+    top: 0px;
+    margin-top: 0;
+}
+
+.cabecalho {
+    margin-top: 0;
+    top: 0px;
 }
 
 #titulo {
