Coreçao de rgb do footer

--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ img {
 }
 
 footer {
-  background-color rgb(51 , 79 , 84); 
+  background-color: rgb(51 , 79 , 84); 
   color: rgb(253 , 251 , 251);
   text-align: center;
 }
