--- a/style.css
+++ b/style.css
@@ -19,11 +19,11 @@ header {
     position: fixed;
     background-color: rgb( 22 , 75 , 80 );
     top: 0px;
-    margin-top: 0;
+    margin-top: 0px;
 }
 
 .cabecalho {
-    margin-top: 0;
+    margin-top: 0px;
     top: 0px;
 }
 
