Inserida tabela com 'status de apendizado';  Alterados os alinhamentos dos itens inline-block Alterado alinhamento dos itens da NAV_BAR.

--- a/style.css
+++ b/style.css
@@ -39,14 +39,24 @@ aside {
 
 .lado-esquerdo {
   display: inline-block;
-  width: 40%;
+  width: 45%;
+  vertical-align: text-top;
+  margin:10px;
 }
 
 .lado-direito {
   display: inline-block;
-  width: 40%;
+  width: 45%;
+  vertical-align: text-top;
+  margin:10px;
 }
 
 .container {
   display: block;
+  padding: 20px;
+}
+
+.nav_bar li {
+  display: inline;
+  margin: 40px;
 }
