--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ a:visited {
 }
 
 .licoes {
-  margin-top: 50px;
+  margin-top: 35px;
 }
 
 h1 {
@@ -64,6 +64,14 @@ h1 {
   font-weight: 800;
 }
 
+#licoes_aprendidas {
+  margin-left: 20px;
+}
+
+#licoes_a_aprender {
+  margin-left: 50px;
+}
+
 #rodape {
   font-size: 13px;
   margin-left: 15px;
@@ -73,26 +81,58 @@ h1 {
 
 .lado-esquerdo {
   float: left;
+  width: 50%;
 }
 
 .lado-direito {
+  float: right;
+  width: 42%;
+}
+
+#aprendizados div {
   display: inline-block;
-  clear: left;
+}
+
+#texto {
+  margin-top: 20px;
 }
 
 #artigo {
   margin-left: 15px;
   margin-right: 15px;
+  border: 1px solid lightgray;
+  border-radius: 8px;
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: justify;
+}
+
+#aside {
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-top: 38px;
+  border: 1px solid lightgray;
+  border-style: dotted;
+  border-radius: 8px;
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: justify;
 }
 
 table , td , th {
-  border: 1px solid black;
+  border: 1px solid lightgray;
   text-align: center;
   border-collapse: collapse;
   padding: 4px;
   align-content: center;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 250px;
+}
+
+table {
+  width: 50%;
+  clear: both;
 }
 
 th {
