--- a/style.css
+++ b/style.css
@@ -60,8 +60,12 @@ h1 {
 }
 
 #nome {
-  font-size: larger;
+  font-size: 30px;
   font-weight: 800;
+}
+
+h2 {
+  font-size: x-large;
 }
 
 #licoes1 {
