--- a/style.css
+++ b/style.css
@@ -1,8 +1,30 @@
 body {
   background-color: rgb(253 , 251 , 251);
+  display: flex;
 }
 
 #cabecalho {
   position: fixed;
   top: 0;
+  box-sizing: content-box;
+  padding: 4rem;
+  border: 10rem , 0 , 0 , 10rem;
+  text-align: justify;
+  align-items: center;
+}
+
+#licoes_a_aprender , #licoes_aprendidas {
+  box-sizing: content-box;
+  align-items: center;
+  position: relative;
+  width: 50%;
+  height: auto;
+  border-width: 1rem;
+  margin: 2px;
+  padding: 2px;
+  display: flexbox;
+}
+
+#minha_foto {
+  display: grid;
 }
