--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ h1 {
 .lado-esquerdo {
   border: solid;
   border-color: rgb(9 , 94 , 9);
-  width: 500px;
-  margin-left: 300px;
+  width: 50%;
+  margin-left: 30px;
   float: left;
   padding: 10px;
   line-height: 25px;
@@ -46,8 +46,8 @@ h1 {
 .lado-direito {
   border: solid;
   border-color: rgb(9 , 94 , 9);
-  width: 380px;
-  margin-right: 300px;
+  width: 38%;
+  margin-right: 30px;
   float: right;
   padding: 10px;
   line-height: 25px;
@@ -57,7 +57,7 @@ h1 {
 #rodape {
   margin-top: 400px;
   text-align: center;
-  height:  40px;
+  height: 40px;
   background-color: rgb(9 , 94 , 9);
 }
 
